--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,47 @@
 annotated-types==0.7.0
 anyio==4.8.0
+audeer==2.2.1
+audiofile==1.5.1
+audmath==1.4.1
 black==24.10.0
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
 coverage==7.6.10
+decorator==4.4.2
 exceptiongroup==1.2.2
 fastapi==0.115.6
+ffmpeg-python==0.2.0
+future==1.0.0
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+imageio==2.36.1
+imageio-ffmpeg==0.5.1
+moviepy==1.0.3
 mypy-extensions==1.0.0
 numpy==2.0.2
 packaging==24.2
-pandas==2.2.3
 pathspec==0.12.1
+pillow==10.4.0
 platformdirs==4.3.6
-pydantic==2.10.4
+proglog==0.1.10
+psutil==6.1.1
+pycparser==2.22
+pydantic==2.10.5
+pydantic-settings==2.7.1
 pydantic_core==2.27.2
-python-dateutil==2.9.0.post0
-pytz==2024.2
-six==1.17.0
+python-dotenv==1.0.1
+python-multipart==0.0.20
+requests==2.32.3
 sniffio==1.3.1
-SQLAlchemy==2.0.36
+soundfile==0.13.0
+SQLAlchemy==2.0.37
 starlette==0.41.3
 tomli==2.2.1
+tqdm==4.67.1
 typing_extensions==4.12.2
-tzdata==2024.2
+urllib3==2.3.0
 uvicorn==0.34.0
